@@ -69,16 +69,16 @@ class ControlPanel0001 extends SeleniumJoomlaTestCase
 		$this->assertTrue($this->isElementPresent("link=Template Manager"));
 		$this->assertTrue($this->isElementPresent("link=Language Manager"));
 		$this->jPrint ("Check that Help menu options are visible\n");
-		$this->assertTrue($this->isElementPresent("link=Joomla Help"));
+		$this->assertTrue($this->isElementPresent("link=Joomla! Help"));
 		$this->assertTrue($this->isElementPresent("link=Official Support Forum"));
 		$this->assertTrue($this->isElementPresent("link=Documentation Wiki"));
-		$this->assertTrue($this->isElementPresent("link=Joomla Extensions"));
-		$this->assertTrue($this->isElementPresent("link=Joomla Translations"));
-		$this->assertTrue($this->isElementPresent("link=Joomla Resources"));
+		$this->assertTrue($this->isElementPresent("link=Joomla! Extensions"));
+		$this->assertTrue($this->isElementPresent("link=Joomla! Translations"));
+		$this->assertTrue($this->isElementPresent("link=Joomla! Resources"));
 		$this->assertTrue($this->isElementPresent("link=Community Portal"));
 		$this->assertTrue($this->isElementPresent("link=Security Center"));
 		$this->assertTrue($this->isElementPresent("link=Developer Resources"));
-		$this->assertTrue($this->isElementPresent("link=Joomla Shop"));
+		$this->assertTrue($this->isElementPresent("link=Joomla! Shop"));
 		$this->jPrint ("Check that Control Panel icons are visible\n");
 		$this->assertTrue($this->isElementPresent("//a[contains(., 'Add New Article')]"));
 		$this->assertTrue($this->isElementPresent("//a[contains(., 'Article Manager')]"));
